# robot_system

./: .gitignore
docker/: build.sh  start.sh
scripts/: setLidar.sh
src/nedo_bringup/: CMakeLists.txt  package.xml
src/nedo_bringup/config/: calib.json  front_camera_ost.yaml  left_camera_ost.yaml  ost.yaml  params.yaml
src/nedo_bringup/launch/: calib_cam_launch.py  capture_launch.py  localization.launch.py  start_camLidar.launch.py  start_robot.launch.py
src/nedo_capture/: CMakeLists.txt  package.xml
src/nedo_capture/include/nedo_capture/: caminfo_node.hpp  compress_node.hpp  nedo_cap_node.hpp  visibility_control.h
src/nedo_capture/src/: caminfo_node.cpp  compress_node.cpp  nedo_cap_node.cpp
src/nedo_localization/: CMakeLists.txt  package.xml
src/nedo_localization/include/nedo_localization/: contour_matcher.hpp  contour_node.hpp  data_sync_node.hpp  detection_utils.hpp  detector_node.hpp  lidar_cam_tf_node.hpp  localizer.hpp  point_matcher_node.hpp  projection_node.hpp  projection_util.hpp  visibility_control.h
src/nedo_localization/src/: contour_matcher_node.cpp  contour_node.cpp  data_sync_node.cpp  detection_utils.cpp  detector_node.cpp  lidar_cam_tf_node.cpp  localizer.cpp  projection_node.cpp  projection_util.cpp
src/nedo_mcl/: CMakeLists.txt  package.xml
src/nedo_mcl/include/nedo_mcl/: ExpResetMcl2.hpp  LikelihoodFieldMap.hpp  Mcl.hpp  OdomModel.hpp  Particle.hpp  Pose.hpp  Scan.hpp
src/nedo_mcl/src/: ExpResetMcl2.cpp  LikelihoodFieldMap.cpp  Mcl.cpp  OdomModel.cpp  Particle.cpp  Pose.cpp  Scan.cpp
src/nedo_navigation/: CMakeLists.txt  package.xml
src/nedo_navigation/include/nedo_navigation/: nedo_controller.hpp
src/nedo_navigation/src/: nedo_controller.cpp
src/nedo_viz/: CMakeLists.txt  package.xml
src/nedo_viz/include/nedo_viz/: show_projection_node.hpp  visibility_control.h
src/nedo_viz/src/: show_projection_node.cpp
src/vehicle_interface/: CMakeLists.txt  package.xml
src/vehicle_interface/msg/: IntPointArray.msg  MarkerWithContour.msg  Markers.msg  PointImage.msg  PoseStampedArray.msg  ProjectedPoints.msg
